2011-03-04  Daiki Ueno  <ueno@unixuser.org>

	* message.el (message-options): Revert 22da67af (workaround for
	XEmacs buffer-local issue).

2011-03-03  Tassilo Horn  <tassilo@member.fsf.org>

	* nnimap.el (nnimap-parse-flags): Add a workaround for FETCH lines with
	numbers too big to be `read'.

2011-03-02  Teodor Zlatanov  <tzz@lifelogs.com>

	* password-cache.el (password-in-cache-p): Add autoload.

	* message.el (message-options): Make buffer-local two ways to attempt
	to fix a XEmacs bug.

2011-03-02  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (gnus-with-article-buffer): Fix buffer live check.

2011-03-01  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (list-identifier): Add list-identifier as a parameter
	group.
	(article-hide-list-identifiers): Use list-identifier group parameter.

2011-02-28  Julien Danjou  <julien@danjou.info>

	* sieve.el (sieve-buffer-script-name): New local variable to store
	sieve script name.
	(sieve-edit-script): Store sieve script name.
	(sieve-upload): Use sieve script name when uploading.
	(sieve-upload): Use substitute-command-keys.
	(sieve-edit-script): Use substitute-command-keys.
	(sieve-refresh-scriptlist): Use substitute-command-keys.
	(sieve-manage-mode-map): Define keymap properly.
	(sieve-manage-mode): Do not set mode name manually, change mode-name to
	(sieve-refresh-scriptlist): Use substitute-command-keys."Sieve-manage".
	Remove commented code about cvs.
	(sieve-manage-quit): New function.
	(sieve-manage-mode-map): Bind 'q' to sieve-manage-quit.

2011-02-27  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-import-other-newsrc-file): New function.

2011-02-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-search): Cache empty result sets.

	* password-cache.el (password-in-cache-p): Convenience function to
	check if a key is in the cache, even if the value is nil.

	* auth-source.el (auth-source-save-behavior): New variable to replace
	`auth-source-never-create'.